FWF-5473 [BUGFIX] Bottom spacing added in the common class

--- a/forms-flow-theme/scss/v8-scss/_theme.scss
+++ b/forms-flow-theme/scss/v8-scss/_theme.scss
@@ -295,6 +295,7 @@ $font-tokens: (
           padding: 1rem 0;
           max-height: var(--body-section-height); // need to be updated after while implementing inner contets. 
           overflow-y: auto;
+          padding-bottom: 5rem;
           &.formedit-layout {
               overflow-y: auto;
               overflow-x: hidden;
